// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 0,
        "position": "relative",
      }
    }
  />
  <input
    className="placeholderColor255"
    maxLength={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "blue",
        "display": "inline",
        "flexDirection": "column",
        "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": "24px",
        "msHyphens": "auto",
        "outline": "none",
        "overflowWrap": "break-word",
        "position": "relative",
        "textAlign": "left",
        "textDecoration": "none",
        "whiteSpace": "pre-wrap",
      }
    }
  />
</div>
`;

exports[`disabled 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 0,
        "position": "relative",
      }
    }
  />
  <input
    className="placeholderColor0"
    disabled={true}
    maxLength={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "black",
        "display": "inline",
        "flexDirection": "column",
        "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": "24px",
        "msHyphens": "auto",
        "opacity": 0.5,
        "outline": "none",
        "overflowWrap": "break-word",
        "position": "relative",
        "textAlign": "left",
        "textDecoration": "none",
        "whiteSpace": "pre-wrap",
      }
    }
  />
</div>
`;

exports[`error 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 0,
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "color": "red",
          "display": "inline",
          "flexDirection": "column",
          "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": 600,
          "lineHeight": "24px",
          "msHyphens": "auto",
          "overflowWrap": "break-word",
          "position": "relative",
          "textAlign": "left",
          "textDecoration": "none",
          "whiteSpace": "pre-wrap",
        }
      }
    >
      error
    </div>
  </div>
  <input
    className="placeholderColor0"
    maxLength={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "black",
        "display": "inline",
        "flexDirection": "column",
        "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": "24px",
        "msHyphens": "auto",
        "outline": "none",
        "overflowWrap": "break-word",
        "position": "relative",
        "textAlign": "left",
        "textDecoration": "none",
        "whiteSpace": "pre-wrap",
      }
    }
  />
</div>
`;

exports[`label 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 0,
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "color": "black",
          "display": "inline",
          "flexDirection": "column",
          "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": 600,
          "lineHeight": "24px",
          "msHyphens": "auto",
          "overflowWrap": "break-word",
          "position": "relative",
          "textAlign": "left",
          "textDecoration": "none",
          "whiteSpace": "pre-wrap",
        }
      }
    >
      label
    </div>
  </div>
  <input
    className="placeholderColor0"
    maxLength={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "black",
        "display": "inline",
        "flexDirection": "column",
        "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": "24px",
        "msHyphens": "auto",
        "outline": "none",
        "overflowWrap": "break-word",
        "position": "relative",
        "textAlign": "left",
        "textDecoration": "none",
        "whiteSpace": "pre-wrap",
      }
    }
  />
</div>
`;

exports[`render 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 0,
        "position": "relative",
      }
    }
  />
  <input
    className="placeholderColor0"
    maxLength={1}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "black",
        "display": "inline",
        "flexDirection": "column",
        "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": "24px",
        "msHyphens": "auto",
        "outline": "none",
        "overflowWrap": "break-word",
        "position": "relative",
        "textAlign": "left",
        "textDecoration": "none",
        "whiteSpace": "pre-wrap",
      }
    }
  />
</div>
`;
